tests/error/ptr_assign_global.gw
// [contains] can't assign non member function to member function pointer
 class C { typedef void (test)(); }
function void test(){}
C c;
test @=> c.test;
